--- a/index.html
+++ b/index.html
@@ -5,19 +5,19 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="theme-color" content="#161616">
-    <title>Home — actuallyaridan</title>
-    <meta name="description" content="an amazing website made by actuallyaridan (adnan bukvic)">
-    <meta name="keywords" content="website, adnan bukvic, actuallyaridan">
-    <meta name="author" content="Adnan Bukvic">
-    <meta name="twitter:card" content="aridan / adnan bukvic's amazing website">
-    <meta name="twitter:site" content="actuallyaridan">
+    <title>Home — @jglypt</title>
+    <meta name="description" content="an amazing website made by @jglypt (Jack)">
+    <meta name="keywords" content="website, Jack, @jglypt">
+    <meta name="author" content="Jack">
+    <meta name="twitter:card" content="aridan / Jack's amazing website">
+    <meta name="twitter:site" content="@jglypt">
     <meta name="twitter:title" content="Home">
     <meta name="twitter:image" content="">
-    <meta name="twitter:description" content="aridan / adnan bukvic's amazing website">
+    <meta name="twitter:description" content="aridan / Jack's amazing website">
     <meta property="og:title" content="Home">
-    <meta property="og:description" content="aridan / adnan bukvic's amazing website">
+    <meta property="og:description" content="aridan / Jack's amazing website">
     <meta property="og:image" content="">
-    <meta property="og:url" content="https://aridan.net">
+    <meta property="og:url" content="https://jglypt.co.uk">
     <link href="/src/styles/styles.css" rel="stylesheet">
     <script src="/src/scripts/settings.js"></script>
     <script src="/src/scripts/dropDownMenu.js"></script>
@@ -101,11 +101,11 @@
         <div>
             <div class="centererWrapper">
                 <section class="titleUnderText">
-                    <p class="subTitle">Testt</p>
+                    <p class="subTitle">Hey! I am Jack! (@jglypt on X) </p>
                 </section>
                 <p class="subTitleExp">About me</p>
                 <section class="project" id="bio">
-                   <h2 class="projectName">Adnan Bukvic, also known as @actuallyaridan</h2>
+                   <h2 class="projectName">Jack, also known as @@jglypt</h2>
                     <p class="projectDesc">Test</p>
                     <div class="projectStuff">
                         <p class="projectStatus"><img draggable="false" class="emoji" alt=""
@@ -134,62 +134,15 @@
                         </p>
                     </div>
                 </section>
-                <section class="project" id="currentdiscord">
-                    <aside id="dcNameContainer">
-                       <h2 class="projectName" id="dcActivityHeaderName">Discord activity</h2>
-                        <p id="statusWrapper" class="dcloading">Loading</p>
-                    </aside>
-                    <div id="landyardDiscord">
-                        <div id="loading">
-                            <div>
-                                <div id="loadingSpinner" class="lds-ring">
-                                    <div></div>
-                                    <div></div>
-                                    <div></div>
-                                    <div></div>
-                                </div>
-                            </div>
-                            <p id="errorMessage">An error occurred.<br>Please try again later.</p>
-                        </div>
-                        <div id="loadedLandyard">
-                            <div id="discord">
-                                <div id="discordInfo" class="discordInfo">
-                                    <img id="discordPFP" class="discordPFP" draggable="false" width="128"
-                                    height="128" alt="" src="src/images/icons/spinner.gif">
-                                    <p id="discordName">Loading</p>
-                                </div>
-                                <hr class="divider">
-                                <div id="discordActivity">
-                                    <div id="discordActivityImages">
-                                        <img id="activityLogoLarge" draggable="false" width="96" height="96" alt=""
-                                            src="src/images/icons/spinner.gif">
-                                        <img id="activityLogoSmall" draggable="false" width="32" height="32" alt=""
-                                            src="src/images/icons/spinner.gif">
-                                    </div>
-                                    <div id="discordActivityInfo">
-                                        <h3 id="activityName">Loading</h3>
-                                        <p id="activityDetails">Loading</p>
-                                        <p id="activityState" class="subTitle">Loading</p>
-                                        <div id="timeremaning">
-                                            <p id="activityTime" class="subTitle">00:00</p>
-                                            <p id="remaining" class="hide subTitle"> remaining</p>
-                                            <p id="elapsed" class="hide subTitle"> elapsed</p>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </section>
             </div>
         </div>
     </main>
     <footer class="footer">
-        <p>Any copyrighted material (as in album art, application icons or similar) displayed on this website is
+        <p>Any copyrighted material (as in application icons or similar) displayed on this website is
             owned by their respective copyright holder. <br>No images are stored directly on this website. No
-            copyright infringement is intended. <br>Contact adnan@aridan.net for takedowns of copyrighted material.
+            copyright infringement is intended. <br>Contact jack@jglypt.co.uk for takedowns of copyrighted material.
         </p>
-        <p>© Copyright 2024 by Adnan Bukvic unless stated otherwise. This project uses the MIT license.</p>
+        <p>© Copyright 2024 by Jack Gilbert unless stated otherwise. This project uses the MIT license.</p>
         <p>Twemoji by Twitter Inc/X Corp is licensed under CC-BY 4.0.</p>
     </footer>
 </body>
