--- a/settings.html
+++ b/settings.html
@@ -69,10 +69,6 @@
                             src="/src/images/emojis/tools.svg"> Projects</a>
                 </li>
                 <li>
-                    <a class="navButton" href="minecraft"><img draggable="false" class="emoji" alt=""
-                            src="/src/images/emojis/game.svg"> Minecraft</a>
-                </li>
-                <li>
                     <a class="navButton" href="contact"><img draggable="false" class="emoji" alt=""
                             src="/src/images/emojis/speak.svg"> Contact</a>
                 </li>
@@ -107,7 +103,7 @@
                 <div class="setting">
                     <ul>
                         <li>
-                            <p>Theme (does not work)</p>
+                            <p>Theme</p>
                             <div>
                                 <input type="radio" id="auto" name="theme-color" value="auto">
                                 <label for="auto" class="auto button">Follow system</label>
@@ -120,21 +116,21 @@
                         <li>
                             <p>Color</p>
                             <div>
-                                <input type="radio" id="purple" name="accent-color" value="113, 10, 151" checked>
-                                <label for="purple" class="purple button">Purple</label>
-                                <input type="radio" id="red" name="accent-color" value="151, 10, 10">
-                                <label for="red" class="red button">Red</label>
-                                <input type="radio" id="green" name="accent-color" value="10, 151, 33">
-                                <label for="green" class="green button">Green</label>
-                                <input type="radio" id="blue" name="accent-color" value="10, 66, 151">
-                                <label for="blue" class="blue button">Blue</label>
-                                <input type="radio" id="orange" name="accent-color" value="151, 78, 10">
-                                <label for="orange" class="orange button">Orange</label>
+                                <input type="radio" id="primary-red" name="accent-color" value="204, 0, 0" checked>
+                                <label for="primary-red" class="primary-red button">Primary Red</label>
+                                <input type="radio" id="dark-red" name="accent-color" value="153, 0, 0">
+                                <label for="dark-red" class="dark-red button">Dark Red</label>
+                                <input type="radio" id="light-red" name="accent-color" value="255, 51, 51">
+                                <label for="light-red" class="light-red button">Light Red</label>
+                                <input type="radio" id="rose-red" name="accent-color" value="255, 102, 102">
+                                <label for="rose-red" class="rose-red button">Rose Red</label>
+                                <input type="radio" id="burgundy" name="accent-color" value="128, 0, 0">
+                                <label for="burgundy" class="burgundy button">Burgundy</label>
                             </div>
                         </li>
                     </ul>
                 </div>
-            </section>
+            </section>            
             <section class="settingGroup" id="accessibility">
                 <p>Accessibility</p>
                 <div class="setting">
