--- a/contact.html
+++ b/contact.html
@@ -6,9 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="theme-color" content="#161616">
     <title>Contact — actuallyaridan</title>
-    <meta name="description" content="Contact actuallyaridan (Adnan Bukvic) with ease">
-    <meta name="keywords" content="contact, adnan bukvic, actuallyaridan">
-    <meta name="author" content="Adnan Bukvic">
+    <meta name="description" content="Contact jglypt (jack) with ease">
+    <meta name="keywords" content="contact, jack, jglypt">
+    <meta name="author" content="jack">
     <link href="/src/styles/styles.css" rel="stylesheet">
     <script src="/src/scripts/settings.js"></script>
     <script src="/src/scripts/dropDownMenu.js"></script>
@@ -72,10 +72,6 @@
                             src="/src/images/emojis/tools.svg"> Projects</a>
                 </li>
                 <li>
-                    <a class="navButton" href="minecraft"><img draggable="false" class="emoji" alt=""
-                            src="/src/images/emojis/game.svg"> Minecraft</a>
-                </li>
-                <li>
                     <a class="navButton activeChoice" href="contact"><img draggable="false" class="emoji" alt=""
                             src="/src/images/emojis/speak.svg"> Contact</a>
                 </li>
@@ -88,57 +84,27 @@
     </header>
     <main>
         <h1>Contact</h1>
-        <div id="emailModal" class="emailModal">
-            <div class="emailModalContent">
-                <div class="titleEmailWrapper">
-                    <p class="titleEmail">Email</p>
-                </div>
-                <p class="emailText">If you have an email client installed on your device, you can click on
-                    the "Send an email" button. If you don't, simply send an email to this address:</p>
-                <p class="emailModalText">adnan@aridan.net</p>
-                <div class="buttonsEmail">
-                    <a class="socialMedia email" href="mailto:adnan@aridan.net">Send an email</a>
-                    <button type="button" onclick="emailToggle()" class="socialMedia emailOK">Close</button>
-                </div>
-            </div>
-        </div>
         <div>
             <div class="centererWrapper">
-                <section class="titleUnderText">
-                    <p class="subTitle">Would you like to talk to me in a one-on-one? Go ahead and send me an email
-                        or an iMessage!I'll be more than happy to reply and I'm looking forward to speaking with
-                        you!</p>
-                </section>
-                <section class="socialMedias project">
-                    <button onclick="emailToggle()" type="button" class="socialMedia email">Show email
-                        address</button>
-
-                    <a class="socialMedia imessage" href="sms:adnan@aridan.net">Send an iMessage</a>
-                </section>
                 <section>
-                    <p class="subTitle">Looking to communicate in a more casual manner? I'm on a bunch of social
-                        media platforms too! Any account on any platform that isn't linked here is not me.</p>
+                    <p class="subTitle">Find me on Social Media! Feel free to @ me or DM me!</p>
                 </section>
                 <section class="socialMedias project">
                     <a rel="noopener" target="_blank" class="socialMedia instagram"
-                        href="https://www.instagram.com/actuallyaridan/">Instagram</a>
+                        href="https://bsky.app/profile/jglypt.co.uk">Bluesky</a>
 
-                    <a rel="noopener" class="socialMedia aMusic" href="https://music.apple.com/profile/actuallyaridan"
-                        target="_blank">Apple Music</a>
-                    <a rel="noopener" class="socialMedia twitter" href="https://x.com/actuallyaridan" target="_blank">X
-                        (formerly
-                        Twitter)</a>
+                    <a rel="noopener" class="socialMedia twitter" href="https://x.com/jglypt" target="_blank">X
+                        </a>
 
-                    <a rel="noopener" class="socialMedia threads" href="https://www.threads.net/@actuallyaridan"
+                    <a rel="noopener" class="socialMedia threads" href="https://www.threads.net/@jglypt"
                         target="_blank">Threads
-                        (an
-                        Instagram app)</a>
+                        </a>
                 </section>
             </div>
         </div>
     </main>
     <footer class="footer">
-        <p>© Copyright 2024 by Adnan Bukvic unless stated otherwise. This project uses the MIT license.</p>
+        <p>© Copyright 2024 by Jack Gilbert unless stated otherwise. This project uses the MIT license.</p>
         <p>Twemoji by Twitter Inc/X Corp is licensed under CC-BY 4.0.</p>
     </footer>
 </body>
