--- a/projects.html
+++ b/projects.html
@@ -5,10 +5,10 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="theme-color" content="#161616">
-    <title>Projects — actuallyaridan</title>
-    <meta name="description" content="All of actuallyaridan (Adnan Bukvic)'s projects on one page">
-    <meta name="keywords" content="projects, adnan bukvic, actuallyaridan">
-    <meta name="author" content="Adnan Bukvic">
+    <title>Projects — jglypt</title>
+    <meta name="description" content="All of jglypt (Jack)'s projects on one page">
+    <meta name="keywords" content="projects, Jack, jglypt">
+    <meta name="author" content="Jack">
     <link href="/src/styles/styles.css" rel="stylesheet">
     <script src="/src/scripts/settings.js"></script>
     <script src="/src/scripts/dropDownMenu.js"></script>
@@ -30,16 +30,8 @@
                             src="/src/images/emojis/house.svg"> Home</a>
                 </li>
                 <li>
-                    <a class="navButton" href="experiences"><img draggable="false" class="emoji" alt=""
-                            src="/src/images/emojis/brain.svg"> Experiences</a>
-                </li>
-                <li>
                     <a class="navButton activeChoice" href="projects"><img draggable="false" class="emoji" alt=""
                             src="/src/images/emojis/tools.svg"> Projects</a>
-                </li>
-                <li>
-                    <a class="navButton" href="minecraft"><img draggable="false" class="emoji" alt=""
-                            src="/src/images/emojis/game.svg"> Minecraft</a>
                 </li>
                 <li>
                     <a class="navButton" href="contact"><img draggable="false" class="emoji" alt=""
@@ -52,7 +44,7 @@
             </menu>
             <menu class="navWrapperMobile">
                 <li>
-                    <a class="navButton" href="/">aridan.net</a>
+                    <a class="navButton" href="/">jglypt.co.uk</a>
                 </li>
                 <li>
                     <button onclick="toggleMenu()" type="button" class="navButton right-link">
@@ -63,16 +55,8 @@
             </menu>
             <menu class="mobileMenu" id="mobileMenuID">
                 <li>
-                    <a class="navButton" href="experiences"><img draggable="false" class="emoji" alt=""
-                            src="/src/images/emojis/brain.svg"> Experiences</a>
-                </li>
-                <li>
                     <a class="navButton activeChoice" href="projects"><img draggable="false" class="emoji" alt=""
                             src="/src/images/emojis/tools.svg"> Projects</a>
-                </li>
-                <li>
-                    <a class="navButton" href="minecraft"><img draggable="false" class="emoji" alt=""
-                            src="/src/images/emojis/game.svg"> Minecraft</a>
                 </li>
                 <li>
                     <a class="navButton" href="contact"><img draggable="false" class="emoji" alt=""
@@ -97,70 +81,29 @@
                     </p>
                 </section>
                 <section class="project">
-                    <h2 class="projectName">This website (aridan.net)</h2>
-                    <p class="projectDesc">This is a website that has all my social media links, all my
-                        experiences and similar listed. I learned a lot during this project, mainly how
-                        to make websites look nice.</p>
+                    <h2 class="projectName">This website (jglypt.co.uk)</h2>
+                    <p class="projectDesc">This website I will try to update however often I remember too :D (no promises that is frequently)
+                        This is a project from actuallyaridan on GitHub, you can also find his X account (@actuallyaridan). 
+                    </p>
                     <div>
                         <p class="projectStatus WIP">Work in progress</p>
                         <p class="projectLink"><img draggable="false" class="emoji" alt=""
-                                src="/src/images/emojis/link.svg"><br> <a rel="noopener" href="https://aridan.net"
-                                target="_blank">aridan.net</a></p>
+                                src="/src/images/emojis/link.svg"><br> <a rel="noopener" href="https://jglypt.co.uk"
+                                target="_blank">jglypt.co.uk</a></p>
                         <p class="projectLink"><img draggable="false" class="emoji" alt=""
                                 src="/src/images/emojis/link.svg"><br> <a rel="noopener"
-                                href="https://github.com/actuallyaridan/aridan.net" target="_blank">GitHub</a></p>
+                                href="https://github.com/jackgilbee/jglypt.co.uk" target="_blank">GitHub</a></p>
                         <p class="projectLearned"><img draggable="false" class="emoji" alt=""
                                 src="/src/images/emojis/teacher.svg"><br> HTML, CSS, JavaScript</p>
                         <p class="projectLegal"><img draggable="false" class="emoji" alt=""
                                 src="/src/images/emojis/judge.svg"><br> MIT license</p>
                     </div>
                 </section>
-                <section class="project">
-                   <h2 class="projectName">Swedish translation of OldTwitter</h2>
-                    <p class="projectDesc">OldTwitter is a Firefox and Chrome extension to make X (formerly Twitter)
-                        look and feel like Twitter from 2015/2018. I actively translate the extension to Swedish,
-                        and I believe I'm doing a pretty decent job! You should check it out!</p>
-                    <div>
-                        <p class="projectStatus WIP">Work in progress</p>
-                        <p class="projectLink"><img draggable="false" class="emoji" alt=""
-                                src="/src/images/emojis/link.svg"><br> <a rel="noopener"
-                                href="https://github.com/dimdenGD/OldTwitter/tree/master/_locales/sv"
-                                target="_blank">GitHub</a></p>
-                        <p class="projectLearned"><img draggable="false" class="emoji" alt=""
-                                src="/src/images/emojis/teacher.svg"><br> i8n technology</p>
-                        <p class="projectLegal"><img draggable="false" class="emoji" alt=""
-                                src="/src/images/emojis/judge.svg"><br> Owned by <a rel="noopener"
-                                href="https://dimden.dev" target="_blank">dimden</a></p>
-                    </div>
-                </section>
-                <section class="project">
-                   <h2 class="projectName">Various iPods</h2>
-                    <p class="projectDesc">I have modified numerous iPods. Some even with transparent click wheels
-                        and
-                        buttons along with transparent faceplates. I've also installed a larger batteries
-                        and replaced their hard drives with microSD cards.</p>
-                    <div>
-                        <p class="projectStatus completed">Completed</p>
-                        <p class="projectLearned"><img draggable="false" class="emoji" alt=""
-                                src="/src/images/emojis/teacher.svg"><br> Electronics modification</p>
-                    </div>
-                </section>
-                <section class="project">
-                   <h2 class="projectName">Hackintoshing a PC</h2>
-                    <p class="projectDesc">Hackintoshing is the act of installing macOS on non-Apple
-                        hardware. I did this as a hobby project and I learned a lot about Apple
-                        software. It was a fun project and it still works to this day!</p>
-                    <div>
-                        <p class="projectStatus completed">Completed</p>
-                        <p class="projectLearned"><img draggable="false" class="emoji" alt=""
-                                src="/src/images/emojis/teacher.svg"><br> Software</p>
-                    </div>
-                </section>
             </div>
         </div>
     </main>
     <footer class="footer">
-        <p>© Copyright 2024 by Adnan Bukvic unless stated otherwise. This project uses the MIT license.</p>
+        <p>© Copyright 2024 by Jack unless stated otherwise. This project uses the MIT license.</p>
         <p>Twemoji by Twitter Inc/X Corp is licensed under CC-BY 4.0.</p>
     </footer>
 </body>
