--- a/index.html
+++ b/index.html
@@ -41,16 +41,8 @@
                             src="/src/images/emojis/house.svg"> Home</a>
                 </li>
                 <li>
-                    <a class="navButton" href="experiences"><img draggable="false" class="emoji" alt=""
-                            src="/src/images/emojis/brain.svg"> Experiences</a>
-                </li>
-                <li>
                     <a class="navButton" href="projects"><img draggable="false" class="emoji" alt=""
                             src="/src/images/emojis/tools.svg"> Projects</a>
-                </li>
-                <li>
-                    <a class="navButton" href="minecraft"><img draggable="false" class="emoji" alt=""
-                            src="/src/images/emojis/game.svg"> Minecraft</a>
                 </li>
                 <li>
                     <a class="navButton" href="contact"><img draggable="false" class="emoji" alt=""
@@ -105,15 +97,17 @@
                 </section>
                 <p class="subTitleExp">About me</p>
                 <section class="project" id="bio">
-                   <h2 class="projectName">Jack, also known as @@jglypt</h2>
-                    <p class="projectDesc">Test</p>
+                   <h2 class="projectName">Jack, also known as @@jglypt. I am 15 years old, taking my GCSEs in the Channel Islands. Interested in Guitar,
+                    Tech hardware & software, and Linux.
+                   </h2>
+                    <p class="projectDesc"> More About Me!</p>
                     <div class="projectStuff">
                         <p class="projectStatus"><img draggable="false" class="emoji" alt=""
-                                src="/src/images/emojis/clock.svg"><br>19 years old</p>
+                                src="/src/images/emojis/clock.svg"><br>15 years old</p>
                         <p class="projectLearned"><img draggable="false" class="emoji" alt=""
                                 src="/src/images/emojis/globe.svg"><br><span class="langProf">fluent:</span>
-                            Swedish, English
-                            <span class="langProf"><br>speaks:</span> Bosnian, Croatian, Serbian
+                            English
+                            <span class="langProf"><br>speaks:</span> Spanish (a tad bit)
                         </p>
                     </div>
                 </section>
@@ -122,14 +116,14 @@
                     <p class="projectDesc">I own a bunch of different tech. Here are my most important ones:</p>
                     <div class="projectStuff">
                         <p class="projectStatus"><img draggable="false" class="emoji" alt=""
-                                src="/src/images/emojis/phone.svg"><br><span class="langProf">Phone:<br></span>iPhone 15
-                            Pro</p>
+                                src="/src/images/emojis/phone.svg"><br><span class="langProf">Phone:<br></span>iPhone SE (2020), Black, 64GB
+                            </p>
                         <p class="projectStatus"><img draggable="false" class="emoji" alt=""
-                                src="/src/images/emojis/laptop.svg"><br><span class="langProf">Laptop:<br></span>MacBook
-                            Air<br>(13", 2020, <br>M1, 8GB/256GB)</p>
+                                src="/src/images/emojis/laptop.svg"><br><span class="langProf">Laptop:<br></span>Crappy Lenovo thing 😂
+                            <br>(15", 2022, <br>AMD Radeon 3020e, 8GB/256GB)</p>
                         <p class="projectLearned"><img draggable="false" class="emoji" alt=""
                                 src="/src/images/emojis/computer.svg"><br><span class="langProf">Computer:<br></span>
-                            AMD Ryzen 5 3600<br>ASUS Radeon RX6700 XT OC Edition <br>16GB RAM<br>Windows 11, macOS
+                            Mac Mini (2023)<br>M2 <br>8GB RAM<br>macOS
                             Sonoma
                         </p>
                     </div>
