--- a/settings.html
+++ b/settings.html
@@ -28,16 +28,8 @@
                             src="/src/images/emojis/house.svg"> Home</a>
                 </li>
                 <li>
-                    <a class="navButton" href="experiences"><img draggable="false" class="emoji" alt=""
-                            src="/src/images/emojis/brain.svg"> Experiences</a>
-                </li>
-                <li>
                     <a class="navButton" href="projects"><img draggable="false" class="emoji" alt=""
                             src="/src/images/emojis/tools.svg"> Projects</a>
-                </li>
-                <li>
-                    <a class="navButton" href="minecraft"><img draggable="false" class="emoji" alt=""
-                            src="/src/images/emojis/game.svg"> Minecraft</a>
                 </li>
                 <li>
                     <a class="navButton" href="contact"><img draggable="false" class="emoji" alt=""
@@ -61,10 +53,6 @@
             </menu>
             <menu class="mobileMenu" id="mobileMenuID">
                 <li>
-                    <a class="navButton" href="experiences"><img draggable="false" class="emoji" alt=""
-                            src="/src/images/emojis/brain.svg"> Experiences</a>
-                </li>
-                <li>
                     <a class="navButton" href="projects"><img draggable="false" class="emoji" alt=""
                             src="/src/images/emojis/tools.svg"> Projects</a>
                 </li>
@@ -83,20 +71,6 @@
         <h1>Settings</h1>
         <form id="settings" action="/src/scripts/settings.js">
             <section class="settingGroup" id="content">
-                <p>Content that you see</p>
-                <div class="setting">
-                    <ul>
-                        <li>
-                            <p><label for="language-select">Language</label></p>
-                            <div>
-                                <select class="button" id="language-select">
-                                    <option value="en" selected>English</option>
-                                    <option value="sv">Svenska</option>
-                                  </select>
-                            </div>
-                        </li>
-                    </ul>
-                </div>
             </section>
             <section class="settingGroup" id="appearance">
                 <p>Appearance</p>
@@ -178,7 +152,7 @@
     </main>
     <footer class="footer">
         <p>Version 1.3a (released 2024-04-02)</p>
-        <p>© Copyright 2024 by Adnan Bukvic unless stated otherwise. This project uses the MIT license.</p>
+        <p>© Copyright 2024 by Jack Gilbert unless stated otherwise. This project uses the MIT license.</p>
         <p>Twemoji by Twitter Inc/X Corp is licensed under CC-BY 4.0.</p>
     </footer>
 </body>
