--- a/index.html
+++ b/index.html
@@ -96,10 +96,10 @@
                 </section>
                 <p class="subTitleExp">About me</p>
                 <section class="project" id="bio">
-                   <h2 class="projectName">Jack, also known as @@jglypt. I am 15 years old, taking my GCSEs in the Channel Islands. Interested in Guitar,
+                   <h2 class="projectName">Jack, also known as @jglypt. I am 15 years old, taking my GCSEs in the Channel Islands. Interested in Guitar,
                     Tech hardware & software, and Linux.
                    </h2>
-                    <p class="projectDesc"> More About Me!</p>
+                    <p class="projectDesc"> Extra info:</p>
                     <div class="projectStuff">
                         <p class="projectStatus"><img draggable="false" class="emoji" alt=""
                                 src="/src/images/emojis/clock.svg"><br>15 years old</p>
