--- a/projects.html
+++ b/projects.html
@@ -104,7 +104,7 @@
         </div>
     </main>
     <footer class="footer">
-        <p>© Copyright 2024 by Jack unless stated otherwise. This project uses the MIT license.</p>
+        <p>© Copyright 2024 by Jack Gilbert unless stated otherwise. This project uses the MIT license.</p>
         <p>Twemoji by Twitter Inc/X Corp is licensed under CC-BY 4.0.</p>
     </footer>
 </body>
