--- a/contact.html
+++ b/contact.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="theme-color" content="#161616">
-    <title>Contact — actuallyaridan</title>
+    <title>Contact — jglypt</title>
     <meta name="description" content="Contact jglypt (jack) with ease">
     <meta name="keywords" content="contact, jack, jglypt">
     <meta name="author" content="jack">
