--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
     <meta name="description" content="an amazing website made by @jglypt (Jack)">
     <meta name="keywords" content="website, Jack, @jglypt">
     <meta name="author" content="Jack">
-    <meta name="twitter:card" content="aridan / Jack's amazing website">
+    <meta name="twitter:card" content="jack / Jack's amazing website">
     <meta name="twitter:site" content="@jglypt">
     <meta name="twitter:title" content="Home">
     <meta name="twitter:image" content="">
-    <meta name="twitter:description" content="aridan / Jack's amazing website">
+    <meta name="twitter:description" content="jack / Jack's amazing website">
     <meta property="og:title" content="Home">
-    <meta property="og:description" content="aridan / Jack's amazing website">
+    <meta property="og:description" content="jack / Jack's amazing website">
     <meta property="og:image" content="">
     <meta property="og:url" content="https://jglypt.co.uk">
     <link href="/src/styles/styles.css" rel="stylesheet">
@@ -30,6 +30,8 @@
     <link rel="manifest" href="/src/favicons/site.webmanifest">
     <script src="https://cdn.jsdelivr.net/npm/@twemoji/api@latest/dist/twemoji.min.js" crossorigin="anonymous"></script>
     <script src="/src/scripts/twimojiFix.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+
 </head>
 
 <body class="boxAlignment ">
@@ -55,7 +57,7 @@
             </menu>
             <menu class="navWrapperMobile">
                 <li>
-                    <a class="navButton activeChoice" href="/">aridan.net</a>
+                    <a class="navButton activeChoice" href="/">jack.co.uk</a>
                 </li>
                 <li>
                     <button onclick="toggleMenu()" type="button" class="navButton right-link">
@@ -66,16 +68,8 @@
             </menu>
             <menu class="mobileMenu" id="mobileMenuID">
                 <li>
-                    <a class="navButton" href="experiences"><img draggable="false" class="emoji" alt=""
-                            src="/src/images/emojis/brain.svg"> Experiences</a>
-                </li>
-                <li>
                     <a class="navButton" href="projects"><img draggable="false" class="emoji" alt=""
                             src="/src/images/emojis/tools.svg"> Projects</a>
-                </li>
-                <li>
-                    <a class="navButton" href="minecraft"><img draggable="false" class="emoji" alt=""
-                            src="/src/images/emojis/game.svg"> Minecraft</a>
                 </li>
                 <li>
                     <a class="navButton" href="contact"><img draggable="false" class="emoji" alt=""
@@ -131,7 +125,7 @@
             </div>
         </div>
     </main>
-    <footer class="footer">
+    <footer class="footer">          
         <p>Any copyrighted material (as in application icons or similar) displayed on this website is
             owned by their respective copyright holder. <br>No images are stored directly on this website. No
             copyright infringement is intended. <br>Contact jack@jglypt.co.uk for takedowns of copyrighted material.
