--- a/index.html
+++ b/index.html
@@ -113,12 +113,15 @@
                                 src="/src/images/emojis/phone.svg"><br><span class="langProf">Phone:<br></span>iPhone SE (2020), Black, 64GB
                             </p>
                         <p class="projectStatus"><img draggable="false" class="emoji" alt=""
-                                src="/src/images/emojis/laptop.svg"><br><span class="langProf">Laptop:<br></span>Crappy Lenovo thing 😂
+                                src="/src/images/emojis/laptop.svg"><br><span class="langProf">Laptop:<br></span>Crappy Lenovo thing 
                             <br>(15", 2022, <br>AMD Radeon 3020e, 8GB/256GB)</p>
                         <p class="projectLearned"><img draggable="false" class="emoji" alt=""
                                 src="/src/images/emojis/computer.svg"><br><span class="langProf">Computer:<br></span>
                             Mac Mini (2023)<br>M2 <br>8GB RAM<br>macOS
                             Sonoma
+                            <p class="projectStatus"><img draggable="false" class="emoji" alt=""
+                                src="/src/images/emojis/watch.svg"><br><span class="langProf">Watch:<br></span>Apple Watch SE 2022 - Midnight Blue
+                            </p>
                         </p>
                     </div>
                 </section>
