--- a/index.html
+++ b/index.html
@@ -91,13 +91,13 @@
                 </section>
                 <p class="subTitleExp">About me</p>
                 <section class="project" id="bio">
-                   <h2 class="projectName">Jack, also known as @jglypt. I am 15 years old, taking my GCSEs in the Channel Islands. Interested in Guitar,
-                    Tech hardware & software, and Linux.
+                   <h2 class="projectName">Jack, also known as @jglypt. 
                    </h2>
                     <p class="projectDesc"> Extra info:</p>
                     <div class="projectStuff">
                         <p class="projectStatus"><img draggable="false" class="emoji" alt=""
-                                src="/src/images/emojis/clock.svg"><br>15 years old</p>
+                                src="/src/images/emojis/clock.svg"><br>I am 15 years old, taking my GCSEs in the Channel Islands. Interested in Guitar,
+                                Tech hardware & software, and Linux.</p>
                         <p class="projectLearned"><img draggable="false" class="emoji" alt=""
                                 src="/src/images/emojis/globe.svg"><br><span class="langProf">fluent:</span>
                             English
