--- a/index.html
+++ b/index.html
@@ -96,8 +96,11 @@
                     <p class="projectDesc"> Extra info:</p>
                     <div class="projectStuff">
                         <p class="projectStatus"><img draggable="false" class="emoji" alt=""
-                                src="/src/images/emojis/clock.svg"><br>I am 15 years old, taking my GCSEs in the Channel Islands. Interested in Guitar,
-                                Tech hardware & software, and Linux.</p>
+                                src="/src/images/emojis/clock.svg"><br>I am 15 years old, taking my GCSEs <br>
+                                 in the Channel Islands.<br>
+                                  Interested in Guitar,
+                                Tech hardware & <br>
+                                 software, and Linux.</p>
                         <p class="projectLearned"><img draggable="false" class="emoji" alt=""
                                 src="/src/images/emojis/globe.svg"><br><span class="langProf">fluent:</span>
                             English
