please help lmao
idk what i did wrong -- i used chatgpt to help LOL

--- a/index.html
+++ b/index.html
@@ -93,14 +93,14 @@
                 <section class="project" id="bio">
                    <h2 class="projectName">Jack, also known as @jglypt. 
                    </h2>
-                    <p class="projectDesc"> Extra info:</p>
+                    <p class="projectDesc"> Extra info:  Taking my GCSEs 
+                        in the Channel Islands.
+                         Interested in Guitar, 
+                       Tech hardware & 
+                        software, and Linux.</p>
                     <div class="projectStuff">
                         <p class="projectStatus"><img draggable="false" class="emoji" alt=""
-                                src="/src/images/emojis/clock.svg"><br>I am 15 years old, taking my GCSEs <br>
-                                 in the Channel Islands.<br>
-                                  Interested in Guitar,
-                                Tech hardware & <br>
-                                 software, and Linux.</p>
+                                src="/src/images/emojis/clock.svg"><br>I am 15 years old</p>
                         <p class="projectLearned"><img draggable="false" class="emoji" alt=""
                                 src="/src/images/emojis/globe.svg"><br><span class="langProf">fluent:</span>
                             English
@@ -123,7 +123,8 @@
                             Mac Mini (2023)<br>M2 <br>8GB RAM<br>macOS
                             Sonoma
                             <p class="projectStatus"><img draggable="false" class="emoji" alt=""
-                                src="/src/images/emojis/watch.svg"><br><span class="langProf">Watch:<br></span>Apple Watch SE 2022 - Midnight Blue
+                                src="/src/images/emojis/watch.svg"><br><span class="langProf">Watch:<br></span>Apple Watch SE 2022 <br> 
+                                - Midnight Blue
                             </p>
                         </p>
                     </div>
