--- a/settings.html
+++ b/settings.html
@@ -71,41 +71,30 @@
     <main class="settings">
         <h1>Settings</h1>
         <form id="settings" action="/src/scripts/settings.js">
-            <section class="settingGroup" id="content">
-            </section>
             <section class="settingGroup" id="appearance">
-                <p>Appearance</p>
+                <h2>Appearance Settings</h2>
                 <div class="setting">
-                    <ul>
-                        <li>
-                            <p>Theme</p>
-                            <div>
-                                <input type="radio" id="auto" name="theme-color" value="auto">
-                                <label for="auto" class="auto button">Follow system</label>
-                                <input type="radio" id="light" name="theme-color" value="light">
-                                <label for="light" class="light button">Light</label>
-                                <input type="radio" id="dark" name="theme-color" value="dark" checked>
-                                <label for="dark" class="dark button">Dark</label>
-                            </div>
-                        </li>
-                        <li>
-                            <p>Color</p>
-                            <div>
-                                <input type="radio" id="primary-red" name="accent-color" value="204, 0, 0" checked>
-                                <label for="primary-red" class="primary-red button">Primary Red</label>
-                                <input type="radio" id="dark-red" name="accent-color" value="153, 0, 0">
-                                <label for="dark-red" class="dark-red button">Dark Red</label>
-                                <input type="radio" id="light-red" name="accent-color" value="255, 51, 51">
-                                <label for="light-red" class="light-red button">Light Red</label>
-                                <input type="radio" id="rose-red" name="accent-color" value="255, 102, 102">
-                                <label for="rose-red" class="rose-red button">Rose Red</label>
-                                <input type="radio" id="burgundy" name="accent-color" value="128, 0, 0">
-                                <label for="burgundy" class="burgundy button">Burgundy</label>
-                            </div>
-                        </li>
-                    </ul>
+                    <h3>Theme</h3>
+                    <div class="theme-selector">
+                        <input type="radio" id="auto" name="theme-color" value="auto">
+                        <label for="auto" class="button">Follow System</label>
+                        <input type="radio" id="light" name="theme-color" value="light">
+                        <label for="light" class="button">Light</label>
+                        <input type="radio" id="dark" name="theme-color" value="dark" checked>
+                        <label for="dark" class="button">Dark</label>
+                    </div>
                 </div>
-            </section>            
+                <div class="setting">
+                    <h3>Accent Color</h3>
+                    <div class="color-selector">
+                        <!-- You can add or remove colors as desired -->
+                        <input type="radio" id="primary-red" name="accent-color" value="204, 0, 0" checked>
+                        <label for="primary-red" class="button red">Primary Red</label>
+                        <!-- Add more options similarly -->
+                    </div>
+                </div>
+            </section>
+        </form>        
             <section class="settingGroup" id="accessibility">
                 <p>Accessibility</p>
                 <div class="setting">
