Fixed a bunch of shit :D

--- a/404.html
+++ b/404.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="theme-color" content="#161616">
-    <title>404 (Not Found) — actuallyaridan</title>
+    <title>404 (Not Found) —  @jglypt</title>
     <link href="/src/styles/styles.css" rel="stylesheet">
     <script src="/src/scripts/settings.js"></script>
     <script src="/src/scripts/dropDownMenu.js"></script>
@@ -19,7 +19,6 @@
     <link rel="manifest" href="/src/favicons/site.webmanifest">
 
 </head>
-
 <body class="boxAlignment">
     <header>
         <nav>
