--- a/index.html
+++ b/index.html
@@ -57,7 +57,8 @@
             </menu>
             <menu class="navWrapperMobile">
                 <li>
-                    <a class="navButton activeChoice" href="/">jack.co.uk</a>
+                    <a class="navButton activeChoice" href="/">jglypt.co.uk
+                    </a>
                 </li>
                 <li>
                     <button onclick="toggleMenu()" type="button" class="navButton right-link">
@@ -91,16 +92,15 @@
                 </section>
                 <p class="subTitleExp">About me</p>
                 <section class="project" id="bio">
-                   <h2 class="projectName">Jack, also known as @jglypt. 
-                   </h2>
-                    <p class="projectDesc"> Extra info:  Taking my GCSEs 
-                        in the Channel Islands.
-                         Interested in Guitar, 
-                       Tech hardware & 
-                        software, and Linux.</p>
+                    <h2 class="projectName">Jack, also known as @jglypt
+                    </h2>
+                    <p class="projectDesc"> I'm taking my GCSEs
+                        in the Channel Islands! I am also interested in Guitar,
+                        and tech hardware along
+                        software and Linux.</p>
                     <div class="projectStuff">
                         <p class="projectStatus"><img draggable="false" class="emoji" alt=""
-                                src="/src/images/emojis/clock.svg"><br>I am 15 years old</p>
+                                src="/src/images/emojis/clock.svg"><br>15 years old</p>
                         <p class="projectLearned"><img draggable="false" class="emoji" alt=""
                                 src="/src/images/emojis/globe.svg"><br><span class="langProf">fluent:</span>
                             English
@@ -109,30 +109,33 @@
                     </div>
                 </section>
                 <section class="project" id="tech">
-                   <h2 class="projectName">Technology</h2>
+                    <h2 class="projectName">Technology</h2>
                     <p class="projectDesc">I own a bunch of different tech. Here are my most important ones:</p>
                     <div class="projectStuff">
                         <p class="projectStatus"><img draggable="false" class="emoji" alt=""
-                                src="/src/images/emojis/phone.svg"><br><span class="langProf">Phone:<br></span>iPhone SE (2020), Black, 64GB
-                            </p>
+                                src="/src/images/emojis/phone.svg"><br><span class="langProf">Phone:<br></span>iPhone SE
+                            (2020), Black, 64GB
+                        </p>
                         <p class="projectStatus"><img draggable="false" class="emoji" alt=""
-                                src="/src/images/emojis/laptop.svg"><br><span class="langProf">Laptop:<br></span>Crappy Lenovo thing 
-                            <br>(15", 2022, <br>AMD Radeon 3020e, 8GB/256GB)</p>
+                                src="/src/images/emojis/laptop.svg"><br><span class="langProf">Laptop:<br></span>Crappy
+                            Lenovo thing
+                            <br>(15", 2022, <br>AMD Radeon 3020e, 8GB/256GB)
+                        </p>
                         <p class="projectLearned"><img draggable="false" class="emoji" alt=""
                                 src="/src/images/emojis/computer.svg"><br><span class="langProf">Computer:<br></span>
                             Mac Mini (2023)<br>M2 <br>8GB RAM<br>macOS
-                            Sonoma
-                            <p class="projectStatus"><img draggable="false" class="emoji" alt=""
-                                src="/src/images/emojis/watch.svg"><br><span class="langProf">Watch:<br></span>Apple Watch SE 2022 <br> 
-                                - Midnight Blue
-                            </p>
+                            Sonoma</p>
+                        <p class="projectStatus"><img draggable="false" class="emoji" alt=""
+                                src="/src/images/emojis/watch.svg"><br><span class="langProf">Watch:<br></span>Apple
+                            Watch SE 2022 <br>
+                            - Midnight Blue
                         </p>
                     </div>
                 </section>
             </div>
         </div>
     </main>
-    <footer class="footer">          
+    <footer class="footer">
         <p>Any copyrighted material (as in application icons or similar) displayed on this website is
             owned by their respective copyright holder. <br>No images are stored directly on this website. No
             copyright infringement is intended. <br>Contact jack@jglypt.co.uk for takedowns of copyrighted material.
