--- a/projects.html
+++ b/projects.html
@@ -2,7 +2,6 @@
 <html lang="en">
 
 <head>
-    <script src="https://cdn.jsdelivr.net/npm/@twemoji/api@latest/dist/twemoji.min.js" crossorigin="anonymous"></script>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="theme-color" content="#161616">
@@ -20,6 +19,8 @@
     <link rel="icon" type="image/png" sizes="512x512" href="/src/favicons/icon-512.png">
     <link rel="icon" type="image/png" sizes="192x192" href="/src/favicons/icon-192.png">
     <link rel="manifest" href="/src/favicons/site.webmanifest">
+    <script src="https://cdn.jsdelivr.net/npm/@twemoji/api@latest/dist/twemoji.min.js" crossorigin="anonymous"></script>
+    <script src="/src/scripts/twimojiFix.js"></script>
 </head>
 
 <body class="boxAlignment ">
@@ -83,8 +84,8 @@
                 </section>
                 <section class="project">
                     <h2 class="projectName">This website (jglypt.co.uk)</h2>
-                    <p class="projectDesc">This website I will try to update however often I remember too :D (no promises that is frequently)
-                        This is a project from actuallyaridan on GitHub, you can also find his X account (@actuallyaridan). 
+                    <p class="projectDesc">This website I will try to update however often I remember too :D (no promises that is frequently).
+                        This is a fork from actuallyaridan on GitHub, you can also find his X account (@actuallyaridan). 
                     </p>
                     <div>
                         <p class="projectStatus WIP">Work in progress</p>
